CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(securesockssvr VERSION 1.0 DESCRIPTION "socks5tls")

SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(USE_STANDALONE_ASIO 1)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(GLOG_STATIC REQUIRED IMPORTED_TARGET glog)
PKG_CHECK_MODULES(OPENSSL_STATIC REQUIRED IMPORTED_TARGET openssl)

SET(SPATH "src")

CONFIGURE_FILE(
	"${PROJECT_SOURCE_DIR}/Configure.h.in"
	"${PROJECT_SOURCE_DIR}/${SPATH}/Configure.h"
	@ONLY
)

ADD_SUBDIRECTORY(${SPATH})

