CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(securesockssvr VERSION 1.0 DESCRIPTION "socks5tls")


ADD_LIBRARY(asio INTERFACE)
TARGET_INCLUDE_DIRECTORIES(asio SYSTEM INTERFACE "../asio-1.16.1/include")

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_EXECUTABLE(securesvr ${DIR_SRCS})

TARGET_LINK_LIBRARIES(securesvr 
	asio
	PkgConfig::GLOG_STATIC
 	PkgConfig::OPENSSL_STATIC
	pthread
)
